--- a/seed-data/tasks.json
+++ b/seed-data/tasks.json
@@ -4,6 +4,7 @@
     "title": "Finish project",
     "description": "Complete all features",
     "due_date": "2025-01-01",
+    "due_time": "14:30",
     "created_at": "2024-12-20",
     "updated_at": "2024-12-25",
     "completed": false,
