--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "server": "node server/server.js"
   },
   "dependencies": {
+    "canvas": "^3.2.0",
     "electron": "^33.4.11",
     "mongodb": "^7.0.0"
   }
